--- a/index.html
+++ b/index.html
@@ -2,76 +2,62 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Tips Calculator</title>  
+  <title>Javascript: Tips Calculator</title>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+
+  <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@700;800;900&display=swap">
+  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+
+  <!-- Custom CSS Styles -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div style="height: 90vh" class="d-flex mt-4 justify-content-center align-items-center">
   <div class="container">
-    <h1 class="display-3 text-danger my-4">Tips Calculator</h1>    
+    <h1 class="display-3 text-danger">Tips Calculator</h1>
+    <p class="lead text-center mb-5">Fill the Amount, No. of Persons, select the Percentage(%) annd Calculate 🙂?</p>
 
       <div class="row">
+
         <div class="col-md-12">
+          <div class="result" class="text-danger text-center"></div>
+        </div>
+
+      <form class="tipCalculateForm">
+        <div class="col-md-12 mb-4">
           <label>Bill Amount</label>
           <input type="text" placeholder="Bill Amount" class="form-control" id="billAmount" />
         </div>
 
-        <div class="col-md-12">
+        <div class="col-md-12 mb-4">
           <label>Tip Percentage</label>
-          <select class="form-control" id="percent" onchange="percentage()">
+          <select class="form-control" id="percent" onclick="selectPercent()">
+            <option value="">Select</option>
             <option value="5">5%</option>
             <option value="10">10%</option>
             <option value="15">15%</option>
             <option value="25">25%</option>
             <option value="other">Other</option>
             </select>
-            <input type="number" placeholder="Other Percent" class="form-control"  id="otherPercent" />
+            <input type="number" placeholder="Other Percent" class="form-control"  id="otherPercent" />            
         </div>
 
-        <div class="col-md-12">
+        <div class="col-md-12 mb-4">
           <label>No. of Persons</label>
           <input type="number" placeholder="No. of Persons" class="form-control"  id="noPersons" />
         </div>
 
         <div class="col-md-12 text-center">
-          <input type="button" class="btn btn-danger" value="Calculate" onclick="calculate()" />
-        </div>      
-        
-        <div class="col-md-12">
-          <div id="result" class="text-danger text-center"></div>
-        </div>
+          <input type="submit" class="btn btn-danger" value="Calculate Tip" />
+        </div>  
+      </form>
+
       </div>
-   </div>   
-  <script>
-    let otherPercent = document.getElementById("otherPercent");
-    otherPercent.style.display = "none";
-
-    const percentage = () => {      
-      percent = document.getElementById("percent").value;
-
-      if(percent === "other"){
-        otherPercent.style.display = "block";
-        percent = document.getElementById("otherPercent").value;
-      } else{
-        percent = document.getElementById("percent").value;
-      }      
-      return percent;
-    }
-
-    const calculate = () => {
-      let billAmount = Number(document.getElementById("billAmount").value);  
-      let noPersons = document.getElementById("noPersons").value;  
-
-      let tipAmount = billAmount * (percentage() / 100);
-      let totalAmount = billAmount + tipAmount;
-      let shareAmount = totalAmount / noPersons;
-
-      let result = document.getElementById("result");
-      result.innerHTML = `Total Amount including Tip is = ${totalAmount}
-                          Each Person Share Amount is = ${shareAmount}`;
-    }
-  </script>
+   </div>
+  <script src="script.js"></script>
 </body>
 </html>
